@@ -1,19 +1,16 @@
 package com.gtocore.common.machine.mana.multiblock;
 
 import com.gtocore.common.data.GTOItems;
-import com.gtocore.data.record.ApotheosisAffixRecord;
+import com.gtocore.common.item.ApothItem;
 import com.gtocore.data.record.EnchantmentRecord;
 
-import com.gtolib.api.machine.trait.CustomRecipeLogic;
-import com.gtolib.api.recipe.Recipe;
 import com.gtolib.api.recipe.RecipeBuilder;
-import com.gtolib.api.recipe.RecipeRunner;
-import com.gtolib.utils.holder.IntHolder;
-import com.gtolib.utils.holder.LongHolder;
-import com.gtolib.utils.holder.ObjectHolder;
+import com.gtolib.utils.ItemUtils;
 
 import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
-import com.gregtechceu.gtceu.api.machine.trait.RecipeLogic;
+import com.gregtechceu.gtceu.api.recipe.GTRecipeDefinition;
+import com.gregtechceu.gtceu.api.recipe.handler.ICustomRecipeLogicHolder;
+import com.gregtechceu.gtceu.api.recipe.handler.RecipeHandlerUnit;
 import com.gregtechceu.gtceu.common.data.GTItems;
 
 import net.minecraft.nbt.CompoundTag;
@@ -27,6 +24,10 @@ import net.minecraft.world.item.Items;
 import com.fast.fastcollection.O2IOpenCacheHashMap;
 import com.fast.fastcollection.O2OOpenCacheHashMap;
 import com.fast.fastcollection.OpenCacheHashSet;
+import com.gto.datasynclib.util.holder.IntHolder;
+import com.gto.datasynclib.util.holder.LongHolder;
+import com.gto.datasynclib.util.holder.ObjHolder;
+import com.gto.registrate.util.entry.ItemEntry;
 import dev.shadowsoffire.apotheosis.adventure.Adventure;
 import it.unimi.dsi.fastutil.ints.Int2IntMap;
 import it.unimi.dsi.fastutil.ints.Int2IntOpenHashMap;
@@ -37,10 +38,12 @@ import java.util.*;
 
 import static com.gtocore.common.data.GTOItems.AFFIX_ESSENCE;
 import static com.gtocore.common.data.GTOItems.ENCHANTMENT_ESSENCE;
+import static com.gtocore.data.record.ApotheosisAffixRecord.AFFIX_ITEM_MAP;
+import static com.gtocore.data.record.EnchantmentRecord.ENCHANTMENT_ITEM_MAP;
 import static net.minecraft.nbt.Tag.TAG_COMPOUND;
 import static net.minecraft.nbt.Tag.TAG_LIST;
 
-public class ThePrimordialReconstructor extends ManaMultiblockMachine {
+public class ThePrimordialReconstructor extends ManaMultiblockMachine implements ICustomRecipeLogicHolder {
 
     public ThePrimordialReconstructor(MetaMachineBlockEntity holder) {
         super(holder);
@@ -56,13 +59,14 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
      * 6 附魔书合并
      * 7 铭刻之布合成
      * 8 宝石合成
-     * 9 强行附魔给予
-     * 10 强行刻印给予
-     * 11 强行修改稀有度
-     * 12 强行增加镶孔
-     * 13 强行镶嵌宝石
+     * 9 宝石粉碎
+     * 10 强行附魔给予
+     * 11 强行刻印给予
+     * 12 强行修改稀有度
+     * 13 强行增加镶孔
+     * 14 强行镶嵌宝石
      */
-    private static int circuit = 0;
+    private int circuit = 0;
 
     @Override
     public void customText(@NotNull List<Component> textList) {
@@ -71,63 +75,34 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         textList.add(Component.translatable("gtocore.machine.the_primordial_reconstructor.mode." + circuit));
     }
 
-    @Override
-    public RecipeLogic createRecipeLogic(Object... args) {
-        return new CustomRecipeLogic(this, this::getRecipe);
-    }
-
-    private Recipe getRecipe() {
-        circuit = checkingCircuit(false);
-        Recipe recipe = null;
-        switch (circuit) {
-            case 1, 2, 3, 4 -> recipe = getDisassembleRecipe();
-            case 5 -> recipe = getEnchantmentsLoadRecipe();
-            case 6 -> recipe = getEnchantedBooksMergeRecipe();
-            case 7 -> recipe = getAffixCanvasLoadRecipe();
-            case 8 -> recipe = getGemSynthesisRecipe();
-            case 9 -> recipe = getForcedEnchantmentRecipe();
-            case 10 -> recipe = getForcedAffixRecipe();
-            case 11 -> recipe = getForcedRarityUpRecipe();
-            case 12 -> recipe = getForcedAddSocketRecipe();
-            case 13 -> recipe = getForcedMosaicGemRecipe();
-        }
-        if (recipe != null) if (RecipeRunner.matchRecipe(this, recipe)) return recipe;
-        return null;
-    }
-
     /**
      * 构建物品解构配方
      */
-    private Recipe getDisassembleRecipe() {
+    private GTRecipeDefinition getDisassembleRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder disassembleRecipeBuilder = getRecipeBuilder();
-        List<ItemStack> inputsItems = new ObjectArrayList<>();
-        List<ItemStack> outputsItems = new ObjectArrayList<>();
-        IntHolder count = new IntHolder(0);
-        forEachInputItems((stack, amount) -> {
+        List<ItemStack> inputsItems = new ArrayList<>();
+        List<ItemStack> outputsItems = new ArrayList<>();
+        unit.forEachItems(true, (stack, amount) -> {
             CompoundTag nbt = stack.getTag();
             if (nbt != null) {
                 if (nbt.contains("affix_data") || nbt.contains("Enchantments")) {
                     if (disassembleEquipment(nbt, inputsItems, outputsItems)) {
                         inputsItems.add(stack);
-                        count.value++;
                     }
                 } else if (circuit == 4 && nbt.contains("Damage")) {
                     inputsItems.add(stack);
-                    count.value++;
                 }
                 if (circuit == 2 || circuit == 4)
-                    if (stack.getItem().equals(Items.ENCHANTED_BOOK.asItem()))
+                    if (stack.getItem() == Items.ENCHANTED_BOOK.asItem())
                         if (disassembleEnchantments(nbt, outputsItems)) {
                             inputsItems.add(stack);
                             outputsItems.add(new ItemStack(Items.BOOK));
-                            count.value++;
                         }
                 if (circuit == 3 || circuit == 4)
-                    if (stack.getItem().equals(GTOItems.AFFIX_CANVAS.asItem()))
+                    if (stack.getItem() == GTOItems.AFFIX_CANVAS.asItem())
                         if (disassembleAffixCanvas(nbt, outputsItems)) {
                             inputsItems.add(stack);
                             outputsItems.add(new ItemStack(GTOItems.AFFIX_CANVAS));
-                            count.value++;
                         }
             }
             return false;
@@ -136,7 +111,7 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
             inputsItems.forEach(disassembleRecipeBuilder::inputItems);
             outputsItems.forEach(disassembleRecipeBuilder::outputItems);
             disassembleRecipeBuilder.duration(20);
-            return disassembleRecipeBuilder.buildRawRecipe();
+            return disassembleRecipeBuilder.build();
         }
         return null;
     }
@@ -148,7 +123,7 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
      * @param inputsItems  输入列表
      * @param outputsItems 输出列表
      */
-    private static boolean disassembleEquipment(CompoundTag nbt, List<ItemStack> inputsItems, List<ItemStack> outputsItems) {
+    private boolean disassembleEquipment(CompoundTag nbt, List<ItemStack> inputsItems, List<ItemStack> outputsItems) {
         boolean find = false;
 
         // 提取附魔
@@ -228,9 +203,10 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
             for (int i = 0; i < enchantmentCount; i++) {
                 CompoundTag enchantment = enchantments.getCompound(i);
                 if (enchantment.contains("id", 8) && enchantment.contains("lvl", 2)) {
-                    int id = EnchantmentRecord.getSerialNumberByEnchantmentId(enchantment.getString("id"));
                     int lvl = 1 << (enchantment.getShort("lvl") - 1);
-                    outputsItems.add(new ItemStack(ENCHANTMENT_ESSENCE[id], lvl));
+                    ItemEntry<ApothItem> essence = ENCHANTMENT_ESSENCE.get(enchantment.getString("id"));
+                    if (essence == null) essence = ENCHANTMENT_ESSENCE.get("original");
+                    outputsItems.add(new ItemStack(essence, lvl));
                 }
             }
             return true;
@@ -268,11 +244,11 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
      * @return 是否成功提取
      */
     private static boolean extractAffix1(CompoundTag nbt, List<ItemStack> outputsItems) {
-        if (nbt.contains("affix_data", TAG_COMPOUND)) {
-            CompoundTag affixData = nbt.getCompound("affix_data");
+        CompoundTag affixData = nbt.getCompound("affix_data");
+        if (!affixData.isEmpty()) {
 
-            if (affixData.contains("affixes", TAG_COMPOUND)) {
-                CompoundTag affixes = affixData.getCompound("affixes");
+            CompoundTag affixes = affixData.getCompound("affixes");
+            if (!affixes.isEmpty()) {
 
                 Set<String> affixKeys = affixes.getAllKeys();
 
@@ -305,13 +281,12 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
      * @return 是否成功提取
      */
     private static boolean extractAffix2(CompoundTag nbt, List<ItemStack> outputsItems) {
-        if (nbt.contains("affix_data", TAG_COMPOUND)) {
-            CompoundTag affixData = nbt.getCompound("affix_data");
-            if (affixData.contains("affixes", TAG_COMPOUND)) {
-                CompoundTag affixes = affixData.getCompound("affixes");
+        CompoundTag affixData = nbt.getCompound("affix_data");
+        if (!affixData.isEmpty()) {
+            CompoundTag affixes = affixData.getCompound("affixes");
+            if (!affixes.isEmpty()) {
                 for (String affixKey : affixes.getAllKeys()) {
-                    int id = ApotheosisAffixRecord.getSerialNumberByApotheosisAffixId(affixKey);
-                    outputsItems.add(new ItemStack(AFFIX_ESSENCE[id]));
+                    outputsItems.add(new ItemStack(AFFIX_ESSENCE.get(affixKey)));
                 }
                 return true;
             }
@@ -355,9 +330,10 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
             int enchantmentCount = enchantments.size();
             for (int i = 0; i < enchantmentCount; i++) {
                 CompoundTag enchantment = enchantments.getCompound(i);
-                int id = EnchantmentRecord.getSerialNumberByEnchantmentId(enchantment.getString("id"));
                 int lvl = 1 << (enchantment.getInt("lvl") - 1);
-                outputsItems.add(new ItemStack(ENCHANTMENT_ESSENCE[id], lvl));
+                ItemEntry<ApothItem> essence = ENCHANTMENT_ESSENCE.get(enchantment.getString("id"));
+                if (essence == null) essence = ENCHANTMENT_ESSENCE.get("original");
+                outputsItems.add(new ItemStack(essence, lvl));
             }
             return true;
         }
@@ -375,8 +351,7 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
             int affixCount = affixes.size();
             for (int i = 0; i < affixCount; i++) {
                 CompoundTag affix = affixes.getCompound(i);
-                int id = ApotheosisAffixRecord.getSerialNumberByApotheosisAffixId(affix.getString("id"));
-                outputsItems.add(new ItemStack(AFFIX_ESSENCE[id]));
+                outputsItems.add(new ItemStack(AFFIX_ESSENCE.get(affix.getString("id"))));
             }
             return true;
         }
@@ -384,10 +359,13 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
     }
 
     /**
-     * 根据获取的字符串获取最后一个 _ 后的数字
+     * 获取冒号后的部分
      */
-    private static int extractNumber(String text) {
-        return Integer.parseInt(text.substring(text.lastIndexOf('_') + 1));
+    private static String getPath(String text) {
+        if (text == null || text.isEmpty()) return text;
+        int lastColonIndex = text.lastIndexOf(':');
+        if (lastColonIndex == -1) return text;
+        return text.substring(lastColonIndex + 1);
     }
 
     /**
@@ -402,31 +380,32 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
     /**
      * 附魔精粹合成附魔书配方
      */
-    private Recipe getEnchantmentsLoadRecipe() {
+    private GTRecipeDefinition getEnchantmentsLoadRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder enchantmentsLoadRecipeBuilder = getRecipeBuilder();
-        ObjectHolder<Item> essence = new ObjectHolder<>(null);
-        LongHolder count = new LongHolder(0);
+        ObjHolder<Item> essence = new ObjHolder<>();
+        LongHolder count = new LongHolder();
 
-        forEachInputItems((stack, amount) -> {
+        unit.forEachItems(true, (stack, amount) -> {
             Item stackItem = stack.getItem();
-            if (essence.value == null)
-                if (getPrefix(stackItem.toString()).equals("enchantment_essence"))
+            if (essence.value == null) {
+                var enchantment = ENCHANTMENT_ITEM_MAP.get(stackItem);
+                if (enchantment != null)
                     essence.value = stackItem;
-            if (essence.value != null && essence.value.equals(stackItem))
+            }
+            if (essence.value != null && essence.value == stackItem)
                 count.value += amount;
             return false;
         });
 
-        int lvl = Math.max(64 - Long.numberOfLeadingZeros(count.value), 30);
+        int lvl = Math.min(64 - Long.numberOfLeadingZeros(count.value), 30);
         if (essence.value != null && lvl > 0) {
-            String enchantment = EnchantmentRecord.getEnchantmentIdBySerialNumber(extractNumber(essence.value.toString()));
-
+            var enchantment = ENCHANTMENT_ITEM_MAP.get(essence.value);
             enchantmentsLoadRecipeBuilder.inputItems(Items.BOOK);
             enchantmentsLoadRecipeBuilder.inputItems(essence.value, 1 << (lvl - 1));
-            enchantmentsLoadRecipeBuilder.outputItems(EnchantmentRecord.getEnchantedBookByEnchantmentId(enchantment, (short) lvl));
+            enchantmentsLoadRecipeBuilder.outputItems(EnchantmentRecord.getEnchantedBookByEnchantmentId(enchantment.enchantmentId(), (short) lvl));
             enchantmentsLoadRecipeBuilder.duration(20);
             enchantmentsLoadRecipeBuilder.MANAt(256);
-            return enchantmentsLoadRecipeBuilder.buildRawRecipe();
+            return enchantmentsLoadRecipeBuilder.build();
         }
 
         return null;
@@ -435,13 +414,13 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
     /**
      * 构建附魔书合并配方
      */
-    private Recipe getEnchantedBooksMergeRecipe() {
+    private GTRecipeDefinition getEnchantedBooksMergeRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder mergeRecipeBuilder = getRecipeBuilder();
         // 存储所有附魔信息 (附魔ID, 等级)
         List<Object2IntMap.Entry<String>> allEnchantments = new ArrayList<>();
         IntHolder totalBooks = new IntHolder(0);
         // 遍历输入物品，收集所有附魔书中的附魔信息
-        forEachInputItems((stack, amount) -> {
+        unit.forEachItems(true, (stack, amount) -> {
             if (stack.getItem() == Items.ENCHANTED_BOOK) {
                 totalBooks.value++;
                 CompoundTag tag = stack.getTag();
@@ -547,19 +526,20 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         mergeRecipeBuilder.duration(20);
         mergeRecipeBuilder.MANAt(512);
 
-        return mergeRecipeBuilder.buildRawRecipe();
+        return mergeRecipeBuilder.build();
     }
 
     /**
      * 刻印精粹合成铭刻之布配方
      */
-    private Recipe getAffixCanvasLoadRecipe() {
+    private GTRecipeDefinition getAffixCanvasLoadRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder affixCanvasLoadRecipeBuilder = getRecipeBuilder();
 
-        Set<Item> uniqueItems = new HashSet<>();
-        forEachInputItems((stack, amount) -> {
+        Set<Item> uniqueItems = new ReferenceOpenHashSet<>();
+        unit.forEachItems(true, (stack, amount) -> {
             Item stackItem = stack.getItem();
-            if (getPrefix(stackItem.toString()).equals("affix_essence")) uniqueItems.add(stackItem);
+            var affix = AFFIX_ITEM_MAP.get(stackItem);
+            if (affix != null) uniqueItems.add(stackItem);
             return false;
         });
         if (uniqueItems.isEmpty()) return null;
@@ -569,7 +549,7 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         ListTag affixList = new ListTag();
         for (Item item : uniqueItems) {
             CompoundTag affixEntry = new CompoundTag();
-            affixEntry.putString("id", ApotheosisAffixRecord.getApotheosisAffixIdBySerialNumber(extractNumber(item.toString())));
+            affixEntry.putString("id", AFFIX_ITEM_MAP.get(item).affixId());
             affixList.add(affixEntry);
             affixCanvasLoadRecipeBuilder.inputItems(item);
         }
@@ -581,17 +561,17 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         affixCanvasLoadRecipeBuilder.duration(20);
         affixCanvasLoadRecipeBuilder.MANAt(512);
 
-        return affixCanvasLoadRecipeBuilder.buildRawRecipe();
+        return affixCanvasLoadRecipeBuilder.build();
     }
 
     /**
      * 宝石合成
      */
-    private Recipe getGemSynthesisRecipe() {
+    private GTRecipeDefinition getGemSynthesisRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder GemSynthesisRecipeBuilder = getRecipeBuilder();
 
-        ObjectArrayList<ItemStack> inputsGems = new ObjectArrayList<>();
-        forEachInputItems((stack, amount) -> {
+        List<ItemStack> inputsGems = new ArrayList<>();
+        unit.forEachItems(true, (stack, amount) -> {
             if (stack.getItem() == Adventure.Items.GEM.get()) {
                 inputsGems.add(stack);
             }
@@ -607,7 +587,7 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
             nbtCountMap.addTo(nbt, count);
         }
         // 创建合并后的堆叠列表
-        ObjectArrayList<ItemStack> mergedGems = new ObjectArrayList<>();
+        List<ItemStack> mergedGems = new ArrayList<>();
         for (Object2IntMap.Entry<CompoundTag> entry : nbtCountMap.object2IntEntrySet()) {
             ItemStack mergedStack = new ItemStack(Adventure.Items.GEM.get(), entry.getIntValue());
             CompoundTag nbt = entry.getKey();
@@ -628,8 +608,8 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
 
         // 根据稀有度将宝石分配到不同的列表中
         @SuppressWarnings("unchecked")
-        ObjectArrayList<ItemStack>[] gemsByRarity = new ObjectArrayList[5];
-        for (int i = 0; i < 5; i++) gemsByRarity[i] = new ObjectArrayList<>();
+        List<ItemStack>[] gemsByRarity = new ArrayList[5];
+        for (int i = 0; i < 5; i++) gemsByRarity[i] = new ArrayList<>();
         for (ItemStack gem : mergedGems) {
             String rarity = getGemRarity(gem);
             if ("apotheosis:ancient".equals(rarity)) continue;
@@ -646,7 +626,7 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
             if (i == 4) return null;
         }
         for (int i = 0; i < 5; i++) {
-            ObjectArrayList<ItemStack> gems = gemsByRarity[i];
+            List<ItemStack> gems = gemsByRarity[i];
             if (gems.isEmpty()) continue;
             for (ItemStack gem : gems) {
                 int count = gem.getCount() / 2;
@@ -675,18 +655,57 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
             }
         }
         GemSynthesisRecipeBuilder.duration(20);
-        return GemSynthesisRecipeBuilder.buildRawRecipe();
+        return GemSynthesisRecipeBuilder.build();
+    }
+
+    private static final Map<String, Integer> RARITY_TO_DUST_COUNT = Map.of(
+            "apotheosis:common", 2,
+            "apotheosis:uncommon", 3,
+            "apotheosis:rare", 4,
+            "apotheosis:epic", 5,
+            "apotheosis:mythic", 6,
+            "apotheosis:ancient", 10);
+
+    /**
+     * 宝石合成
+     */
+    private GTRecipeDefinition getGemCrushingRecipe(RecipeHandlerUnit unit) {
+        RecipeBuilder gemCrushingRecipeBuilder = getRecipeBuilder();
+
+        List<ItemStack> inputsItems = new ArrayList<>();
+        LongHolder totalDustCount = new LongHolder(0);
+
+        unit.forEachItems(true, (stack, amount) -> {
+            if (stack.getItem() == Adventure.Items.GEM.get()) {
+                int stackDust = stack.getCount() * RARITY_TO_DUST_COUNT.getOrDefault(getGemRarity(stack), 1);
+                inputsItems.add(stack);
+                if (totalDustCount.value + stackDust >= Integer.MAX_VALUE) {
+                    totalDustCount.value = Integer.MAX_VALUE;
+                    return true;
+                } else {
+                    totalDustCount.value += stackDust;
+                }
+            }
+            return false;
+        });
+
+        if (inputsItems.isEmpty() || totalDustCount.value <= 0) return null;
+        inputsItems.forEach(gemCrushingRecipeBuilder::inputItems);
+        gemCrushingRecipeBuilder.outputItems(Adventure.Items.GEM_DUST.get(), (int) totalDustCount.value);
+
+        gemCrushingRecipeBuilder.duration(10);
+        return gemCrushingRecipeBuilder.build();
     }
 
     /**
      * 强行为物品添加附魔
      */
-    private Recipe getForcedEnchantmentRecipe() {
+    private GTRecipeDefinition getForcedEnchantmentRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder forcedEnchantmentRecipeBuilder = getRecipeBuilder();
 
-        ObjectHolder<ItemStack> EnchantedBook = new ObjectHolder<>(null);
-        ObjectHolder<ItemStack> NonEnchantedItem = new ObjectHolder<>(null);
-        forEachInputItems((stack, amount) -> {
+        ObjHolder<ItemStack> EnchantedBook = new ObjHolder<>();
+        ObjHolder<ItemStack> NonEnchantedItem = new ObjHolder<>();
+        unit.forEachItems(true, (stack, amount) -> {
             Item stackItem = stack.getItem();
             if (stackItem == GTItems.PROGRAMMED_CIRCUIT.asItem()) return false;
             if (EnchantedBook.value == null && stackItem == Items.ENCHANTED_BOOK) {
@@ -730,18 +749,18 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         forcedEnchantmentRecipeBuilder.duration(5);
         forcedEnchantmentRecipeBuilder.MANAt(512);
 
-        return forcedEnchantmentRecipeBuilder.buildRawRecipe();
+        return forcedEnchantmentRecipeBuilder.build();
     }
 
     /**
      * 强行为物品添加刻印
      */
-    private Recipe getForcedAffixRecipe() {
+    private GTRecipeDefinition getForcedAffixRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder forcedAffixRecipeBuilder = getRecipeBuilder();
 
-        ObjectHolder<ItemStack> affixCanvas = new ObjectHolder<>(null);
-        ObjectHolder<ItemStack> NonAffixItem = new ObjectHolder<>(null);
-        forEachInputItems((stack, amount) -> {
+        ObjHolder<ItemStack> affixCanvas = new ObjHolder<>();
+        ObjHolder<ItemStack> NonAffixItem = new ObjHolder<>();
+        unit.forEachItems(true, (stack, amount) -> {
             Item stackItem = stack.getItem();
             if (stackItem == GTItems.PROGRAMMED_CIRCUIT.asItem()) return false;
             if (affixCanvas.value == null && stackItem == GTOItems.AFFIX_CANVAS.asItem()) {
@@ -793,18 +812,18 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         forcedAffixRecipeBuilder.duration(5);
         forcedAffixRecipeBuilder.MANAt(512);
 
-        return forcedAffixRecipeBuilder.buildRawRecipe();
+        return forcedAffixRecipeBuilder.build();
     }
 
     /**
      * 强行为物品更改稀有度等级
      */
-    private Recipe getForcedRarityUpRecipe() {
+    private GTRecipeDefinition getForcedRarityUpRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder ForcedRarityUpRecipeBuilder = getRecipeBuilder();
 
-        ObjectHolder<ItemStack> rarityUpItem = new ObjectHolder<>(null);
-        ObjectHolder<ItemStack> materialItem = new ObjectHolder<>(null);
-        forEachInputItems((stack, amount) -> {
+        ObjHolder<ItemStack> rarityUpItem = new ObjHolder<>();
+        ObjHolder<ItemStack> materialItem = new ObjHolder<>();
+        unit.forEachItems(true, (stack, amount) -> {
             Item stackItem = stack.getItem();
             if (stackItem == GTItems.PROGRAMMED_CIRCUIT.asItem() || stackItem == Adventure.Items.SIGIL_OF_REBIRTH.get()) return false;
             if (rarityUpItem.value == null)
@@ -819,7 +838,7 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         });
         if (rarityUpItem.value == null || materialItem.value == null) return null;
 
-        String rarity = "apotheosis:" + getPrefix(materialItem.value.getItem().toString());
+        String rarity = "apotheosis:" + getPrefix(ItemUtils.getIdLocation(materialItem.value.getItem()).getPath());
 
         ItemStack inputRarityUpItem = rarityUpItem.value.copy();
         ItemStack inputMaterialItem = materialItem.value.copy();
@@ -839,22 +858,22 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         ForcedRarityUpRecipeBuilder.duration(5);
         ForcedRarityUpRecipeBuilder.MANAt(512);
 
-        return ForcedRarityUpRecipeBuilder.buildRawRecipe();
+        return ForcedRarityUpRecipeBuilder.build();
     }
 
     /**
      * 强行为物品添加镶孔
      */
-    private Recipe getForcedAddSocketRecipe() {
+    private GTRecipeDefinition getForcedAddSocketRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder ForcedAddSocketRecipeBuilder = getRecipeBuilder();
 
-        ObjectHolder<ItemStack> addSocketItem = new ObjectHolder<>(null);
-        IntHolder sigilCount = new IntHolder(0);
-        forEachInputItems((stack, amount) -> {
+        ObjHolder<ItemStack> addSocketItem = new ObjHolder<>();
+        IntHolder sigilCount = new IntHolder();
+        unit.forEachItems(true, (stack, amount) -> {
             Item stackItem = stack.getItem();
             if (stackItem == GTItems.PROGRAMMED_CIRCUIT.asItem()) return false;
             if (stackItem == Adventure.Items.SIGIL_OF_SOCKETING.get()) {
-                sigilCount.value += amount;
+                sigilCount.value += (int) amount;
                 return false;
             }
             if (addSocketItem.value == null)
@@ -884,18 +903,18 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         ForcedAddSocketRecipeBuilder.duration(5);
         ForcedAddSocketRecipeBuilder.MANAt(512);
 
-        return ForcedAddSocketRecipeBuilder.buildRawRecipe();
+        return ForcedAddSocketRecipeBuilder.build();
     }
 
     /**
      * 强行为物品镶嵌宝石
      */
-    private Recipe getForcedMosaicGemRecipe() {
+    private GTRecipeDefinition getForcedMosaicGemRecipe(RecipeHandlerUnit unit) {
         RecipeBuilder ForcedMosaicGemRecipeBuilder = getRecipeBuilder();
 
-        ObjectHolder<ItemStack> addGemItem = new ObjectHolder<>(null);
-        List<ItemStack> gemItems = new ObjectArrayList<>();
-        forEachInputItems((stack, amount) -> {
+        ObjHolder<ItemStack> addGemItem = new ObjHolder<>();
+        List<ItemStack> gemItems = new ArrayList<>();
+        unit.forEachItems(true, (stack, amount) -> {
             Item stackItem = stack.getItem();
             if (stackItem == GTItems.PROGRAMMED_CIRCUIT.asItem()) return false;
             if (addGemItem.value == null && stackItem != Adventure.Items.GEM.get())
@@ -923,10 +942,10 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
             gems.add(airTag);
         }
         while (gems.size() > socketCount) {
-            gems.remove(gems.size() - 1);
+            gems.removeLast();
         }
 
-        List<ItemStack> inputGemItems = new ObjectArrayList<>();
+        List<ItemStack> inputGemItems = new ArrayList<>();
         boolean full = false;
         for (ItemStack inputGemItem : gemItems) {
             int stackCount = inputGemItem.getCount();
@@ -963,7 +982,7 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         ForcedMosaicGemRecipeBuilder.duration(5);
         ForcedMosaicGemRecipeBuilder.MANAt(512);
 
-        return ForcedMosaicGemRecipeBuilder.buildRawRecipe();
+        return ForcedMosaicGemRecipeBuilder.build();
     }
 
     // 定义所有可能的稀有度
@@ -1024,9 +1043,12 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
     private static String getGemRarity(ItemStack gemStack) {
         if (gemStack.hasTag()) {
             CompoundTag tag = gemStack.getTag();
-            if (tag != null && tag.contains("affix_data")) {
+            if (tag != null) {
                 CompoundTag affixData = tag.getCompound("affix_data");
-                if (affixData.contains("rarity")) return affixData.getString("rarity");
+                if (!affixData.isEmpty()) {
+                    String rarity = affixData.getString("rarity");
+                    return !rarity.isEmpty() ? rarity : "apotheosis:common";
+                }
             }
         }
         return "apotheosis:common";
@@ -1045,5 +1067,25 @@ public class ThePrimordialReconstructor extends ManaMultiblockMachine {
         rootTag.putString("gem", gem);
         gemStack.setTag(rootTag);
         return gemStack;
+    }
+
+    @Override
+    public GTRecipeDefinition createCustomRecipe(RecipeHandlerUnit unit) {
+        circuit = unit.getCircuit(false);
+        GTRecipeDefinition recipe = null;
+        switch (circuit) {
+            case 1, 2, 3, 4 -> recipe = getDisassembleRecipe(unit);
+            case 5 -> recipe = getEnchantmentsLoadRecipe(unit);
+            case 6 -> recipe = getEnchantedBooksMergeRecipe(unit);
+            case 7 -> recipe = getAffixCanvasLoadRecipe(unit);
+            case 8 -> recipe = getGemSynthesisRecipe(unit);
+            case 9 -> recipe = getGemCrushingRecipe(unit);
+            case 10 -> recipe = getForcedEnchantmentRecipe(unit);
+            case 11 -> recipe = getForcedAffixRecipe(unit);
+            case 12 -> recipe = getForcedRarityUpRecipe(unit);
+            case 13 -> recipe = getForcedAddSocketRecipe(unit);
+            case 14 -> recipe = getForcedMosaicGemRecipe(unit);
+        }
+        return recipe;
     }
 }
