@@ -1,20 +1,21 @@
 package com.gtocore.common.machine.multiblock.noenergy;
 
 import com.gtocore.common.data.GTOMaterials;
+import com.gtocore.common.data.GTORecipeDataKeys;
 
 import com.gtolib.api.machine.multiblock.NoEnergyMultiblockMachine;
-import com.gtolib.api.recipe.Recipe;
-import com.gtolib.api.recipe.modifier.ParallelLogic;
 
 import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
-import com.gregtechceu.gtceu.api.capability.recipe.FluidRecipeCapability;
 import com.gregtechceu.gtceu.api.machine.feature.IExplosionMachine;
+import com.gregtechceu.gtceu.api.recipe.GTRecipe;
+import com.gregtechceu.gtceu.api.recipe.handler.RecipeHandlerUnit;
+import com.gregtechceu.gtceu.api.recipe.modifier.ParallelLogic;
 import com.gregtechceu.gtceu.common.data.GTMaterials;
 
 import net.minecraft.world.level.material.Fluid;
 import net.minecraft.world.level.material.Fluids;
 
-import com.lowdragmc.lowdraglib.syncdata.annotation.Persisted;
+import com.gto.datasynclib.annotations.SaveToDisk;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -29,36 +30,41 @@ public final class HeatExchangerMachine extends NoEnergyMultiblockMachine implem
         super(holder);
     }
 
-    @Persisted
+    @SaveToDisk
     private long hs;
 
-    @Persisted
+    @SaveToDisk
     private boolean water;
 
     @Nullable
     @Override
-    protected Recipe getRealRecipe(@NotNull Recipe recipe) {
-        water = FluidRecipeCapability.CAP.of(recipe.inputs.get(FluidRecipeCapability.CAP).get(1).getContent()).getStacks()[0].getFluid() == Fluids.WATER;
-        var result = ParallelLogic.accurateParallel(this, getRecipeBuilder()
-                .inputFluids(FluidRecipeCapability.CAP.of(recipe.inputs
-                        .get(FluidRecipeCapability.CAP).get(0).getContent()))
-                .outputFluids(FluidRecipeCapability.CAP.of(recipe.outputs
-                        .get(FluidRecipeCapability.CAP).get(0).getContent()))
+    public GTRecipe getRealRecipe(@NotNull RecipeHandlerUnit unit, @NotNull GTRecipe recipe) {
+        water = recipe.fluidInputs.get(1).inner.getFluid() == Fluids.WATER;
+        var result = ParallelLogic.accurateParallel(this, unit, getRecipeBuilder()
+                .inputFluids(recipe.fluidInputs.getFirst())
+                .outputFluids(recipe.fluidOutputs.getFirst())
                 .duration(200)
                 .buildRawRecipe(), Integer.MAX_VALUE);
         if (result == null) return null;
-        hs = result.parallels * recipe.data.getLong("eu") / 2;
-        if (inputFluid(water ? Fluids.WATER : DistilledWater, hs / 40)) {
-            return result;
-        } else {
-            doExplosion(Math.min(10, hs / 10000));
-        }
-        return null;
+        hs = result.parallels * recipe.data.getLong(GTORecipeDataKeys.EU) / 2;
+        return result;
     }
 
     @Override
-    public void onRecipeFinish() {
-        super.onRecipeFinish();
+    public boolean handleRecipeInput(@NotNull RecipeHandlerUnit unit, @NotNull GTRecipe recipe) {
+        if (super.handleRecipeInput(unit, recipe)) {
+            if (!unit.inputFluid(water ? Fluids.WATER : DistilledWater, hs / 40)) {
+                doExplosion(Math.min(10, hs / 10000));
+                return false;
+            }
+            return true;
+        }
+        return false;
+    }
+
+    @Override
+    public void afterWorking() {
+        super.afterWorking();
         if (hs != 0) {
             if (getRecipeLogic().getTotalContinuousRunningTime() > 800) {
                 if (water) {
