@@ -1,23 +1,25 @@
 package com.gtocore.common.machine.multiblock.part;
 
 import com.gregtechceu.gtceu.api.GTValues;
+import com.gregtechceu.gtceu.api.blockentity.ITickSubscription;
 import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
-import com.gregtechceu.gtceu.api.capability.recipe.IO;
 import com.gregtechceu.gtceu.api.machine.TickableSubscription;
-import com.gregtechceu.gtceu.api.machine.multiblock.part.TieredIOPartMachine;
+import com.gregtechceu.gtceu.api.machine.multiblock.part.WorkableTieredIOPartMachine;
 import com.gregtechceu.gtceu.api.machine.trait.NotifiableFluidTank;
-import com.gregtechceu.gtceu.api.recipe.RecipeHelper;
+import com.gregtechceu.gtceu.api.recipe.GTRecipeBuilder;
+import com.gregtechceu.gtceu.api.recipe.handler.IO;
+import com.gregtechceu.gtceu.api.transfer.item.ICustomItemStackHandler;
 import com.gregtechceu.gtceu.common.recipe.condition.DimensionCondition;
-import com.gregtechceu.gtceu.data.recipe.builder.GTRecipeBuilder;
+import com.gregtechceu.gtceu.utils.TaskHandler;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.particles.ParticleTypes;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.TickTask;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.material.Fluid;
 import net.minecraft.world.phys.BlockHitResult;
@@ -26,29 +28,28 @@ import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import net.minecraftforge.fluids.FluidStack;
 import net.minecraftforge.fluids.capability.IFluidHandler;
-import net.minecraftforge.items.IItemHandlerModifiable;
 
-import com.fast.fastcollection.O2OOpenCacheHashMap;
-import com.lowdragmc.lowdraglib.syncdata.annotation.DescSynced;
-import com.lowdragmc.lowdraglib.syncdata.annotation.Persisted;
-import com.lowdragmc.lowdraglib.syncdata.annotation.RequireRerender;
+import com.gto.datasynclib.annotations.SaveToDisk;
+import com.gto.datasynclib.annotations.SyncToClient;
+import it.unimi.dsi.fastutil.objects.Reference2ReferenceOpenHashMap;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.Map;
 
-public final class InfiniteIntakeHatchPartMachine extends TieredIOPartMachine {
+public final class InfiniteIntakeHatchPartMachine extends WorkableTieredIOPartMachine {
 
-    public static final Map<ResourceLocation, Fluid> AIR_MAP = new O2OOpenCacheHashMap<>();
+    public static final Map<ResourceKey<Level>, Fluid> AIR_MAP = new Reference2ReferenceOpenHashMap<>();
 
     private TickableSubscription intakeSubs;
 
-    @Persisted
+    @SaveToDisk
     private final NotifiableFluidTank tank;
 
-    @RequireRerender
-    @DescSynced
+    @SyncToClient(notifyUpdate = true)
     private boolean isWorking;
+
+    private TickableSubscription particleSubscription;
 
     public InfiniteIntakeHatchPartMachine(MetaMachineBlockEntity holder) {
         super(holder, GTValues.ULV, IO.IN);
@@ -57,12 +58,12 @@ public final class InfiniteIntakeHatchPartMachine extends TieredIOPartMachine {
     }
 
     public static void init(GTRecipeBuilder recipeBuilder) {
-        for (var condition : recipeBuilder.conditions) {
+        for (var condition : recipeBuilder.getConditions()) {
             if (condition instanceof DimensionCondition dimensionCondition) {
-                var dim = dimensionCondition.getDimension();
-                var fluids = RecipeHelper.getOutputFluids(recipeBuilder);
+                var dim = dimensionCondition.dimension;
+                var fluids = recipeBuilder.getFluidOutputs();
                 if (!fluids.isEmpty()) {
-                    AIR_MAP.put(dim, fluids.get(0).getFluid());
+                    AIR_MAP.put(dim, fluids.getFirst().inner.getFluid());
                     break;
                 }
             }
@@ -71,7 +72,7 @@ public final class InfiniteIntakeHatchPartMachine extends TieredIOPartMachine {
 
     @Override
     @Nullable
-    public IItemHandlerModifiable getItemHandlerCap(@Nullable Direction side, boolean useCoverCapability) {
+    public ICustomItemStackHandler getItemHandlerCap(@Nullable Direction side, boolean useCoverCapability) {
         return null;
     }
 
@@ -79,7 +80,9 @@ public final class InfiniteIntakeHatchPartMachine extends TieredIOPartMachine {
     public void onLoad() {
         super.onLoad();
         if (getLevel() instanceof ServerLevel serverLevel) {
-            serverLevel.getServer().tell(new TickTask(0, this::updateTankSubscription));
+            TaskHandler.enqueueTask(serverLevel, this::updateTankSubscription);
+        } else {
+            particleSubscription = subscribeClientTick(particleSubscription, this::particleTick, 5);
         }
     }
 
@@ -87,11 +90,12 @@ public final class InfiniteIntakeHatchPartMachine extends TieredIOPartMachine {
     public void onUnload() {
         super.onUnload();
         unsubscribe();
+        particleSubscription = ITickSubscription.unsubscribe(particleSubscription);
     }
 
     @Override
     public void onPaintingColorChanged(int color) {
-        getHandlerList().setColor(color, true);
+        getHandlerUnit().setColor(color, true);
     }
 
     @Override
@@ -109,11 +113,9 @@ public final class InfiniteIntakeHatchPartMachine extends TieredIOPartMachine {
         return false;
     }
 
-    @Override
     @OnlyIn(Dist.CLIENT)
-    public void clientTick() {
-        super.clientTick();
-        if (isWorking && getOffsetTimer() % 5 == 0) {
+    private void particleTick() {
+        if (isWorking) {
             var facing = this.getFrontFacing();
             int stepX = facing.getStepX();
             int stepY = facing.getStepY();
@@ -141,7 +143,7 @@ public final class InfiniteIntakeHatchPartMachine extends TieredIOPartMachine {
     }
 
     private void intake() {
-        var fluid = AIR_MAP.get(getLevel().dimension().location());
+        var fluid = AIR_MAP.get(getLevel().dimension());
         if (fluid == null) {
             unsubscribe();
             return;
